--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ Namaste!
         <div class="card">
           <img src="images/thapar-logo.jpg"  class = "card-img-top edu-logo"alt="Dps logo">
           <div class="card-body">
-            <h5>DPS,Karnal</h5>
-            <p> I passed my matric from Delhi Public School,Karnal with <b>10 CGPA</b></p>
+            <h5>TIET,Patiala</h5>
+            <p> I have been in this Prestigious Institute since 2019 with a current <b>7.6 as my CGPA</b></p>
           </div>
           <div class="card-footer">
             2019 onwards
