--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Kurale&family=Lobster&family=Montserrat&family=Raleway:wght@400;600&family=Share+Tech&display=swap" rel="stylesheet">
-
+ <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <!-- <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet"> -->
   <!-- <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&amp;family=Creepster&amp;family=Montserrat&amp;family=Work+Sans:ital,wght@1,700&amp;display=swap" rel="stylesheet"> -->
