--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
         <a class="nav-link" href="#education">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#skills">Skills</a>
+        <a class="nav-link" href="#skill">Skills</a>
       </li>
+
       <li class="nav-item">
         <a class="nav-link" href="#ContactMe">Contact</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+      </li>
+<li class="nav-item">
+        <a class="nav-link" href="drum-set/index.html">Play Drum</a>
       </li>
     </ul>
   </div>
