--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </li>
       </li>
 <li class="nav-item">
-        <a class="nav-link" href="drum-set/index.html">Play Drum</a>
+        <a class="nav-link" href="drum-set/index.html">Play-Drum</a>
       </li>
     </ul>
   </div>
