--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
 <div id = "greetings" >
-  <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval=3000>
+  <div id="carouselExampleSlidesOnly" class="carousel slide cardx" data-ride="carousel" data-interval=3000>
   <div class="carousel-inner">
     <div class="carousel-item active">
   Hello!!
