--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Namaste!
 
   <section id="intro">
 
-    <p>Hey! I am Kanishk, residing in Haryana,India and currently a first year student in Thapar Institute of Technology,Patiala.
+    <p>Hey! I am Kanishk, residing in Haryana,India and currently a second year student in Thapar Institute of Technology,Patiala.
     </p>
   </section>
   <section id="education" class="center-all" >
@@ -165,7 +165,7 @@ Namaste!
           <img src="images/thapar-logo.jpg"  class = "card-img-top edu-logo"alt="Dps logo">
           <div class="card-body">
             <h5>TIET,Patiala</h5>
-            <p> I have been in this Prestigious Institute since 2019 with a current <b>7.6 as my CGPA</b></p>
+            <p> I have been in this Prestigious Institute since 2019 with a current <b>8 as my CGPA</b></p>
           </div>
           <div class="card-footer">
             2019 onwards
